@@ -17,6 +17,8 @@
  */
 package b4j.core.session;
 
+import java.lang.reflect.InvocationTargetException;
+
 import org.apache.commons.configuration.Configuration;
 import org.apache.commons.configuration.ConfigurationException;
 import org.slf4j.Logger;
@@ -61,7 +63,7 @@ public abstract class AbstractHttpSession implements Session {
 	 * This implementation looks for an element &lt;AuthorizationCallback&gt;. It
 	 * defines the implementation class that will deliver login name and password.
 	 * If no class was given or class is "null" then the content of the tag
-	 * must contain two elements &lt:login&gt; and &lt;password&gt;.
+	 * must contain two elements &lt;login&gt; and &lt;password&gt;.
 	 * <P>
 	 * The default {@link Issue} implementation class to be used can also
 	 * be configured using the &lt;Issue&gt; tag, e.g.
@@ -115,9 +117,13 @@ public abstract class AbstractHttpSession implements Session {
 	 */
 	public Issue createIssue() {
 		try {
-			return (Issue)getBugzillaBugClass().newInstance();
+			return (Issue)getBugzillaBugClass().getConstructor().newInstance();
 		} catch (IllegalAccessException e) {
 			throw new IllegalStateException("Cannot access constructor: "+getBugzillaBugClass().getName(), e);
+		} catch (NoSuchMethodException e) {
+			throw new IllegalStateException("Cannot find default constructor: "+getBugzillaBugClass().getName(), e);
+		} catch (InvocationTargetException e) {
+			throw new IllegalStateException("Cannot invocate constructor: "+getBugzillaBugClass().getName(), e);
 		} catch (InstantiationException e) {
 			throw new IllegalStateException("Cannot instantiate class: "+getBugzillaBugClass().getName(), e);
 		}
